--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jasmine-core": "^4.5.0",
     "mustache": "^4.2.0",
     "mustache-loader": "^1.4.3",
+    "sanitize-filename-truncate": "^1.0.2",
     "ts-loader": "^9.2.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
