--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "scroll-rise": "~1.6.1",
-    "scroll-rise.colors": "~0.0.1"
+    "scroll-rise": "1.6.2",
+    "scroll-rise.colors": "0.0.1"
   }
 }
