--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,11 +28,11 @@ jobs:
         with:
           repository: drKaramazin/scroll-rise
       - name: Temp 1
-        run: pwd
+        run: pwd && ls
       - name: Checkout site
         uses: actions/checkout@v3
       - name: Temp 2
-        run: pwd
+        run: pwd && ls
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - uses: actions/setup-node@v3
