--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: drKaramazin/scroll-rise
+          path: '../scroll-rise'
       - name: Temp 1
         run: pwd && ls
       - name: Checkout site
