--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: drKaramazin/scroll-rise
-          path: '../scroll-rise'
+          path: './scroll-rise'
       - name: Temp 1
         run: pwd && ls
       - name: Checkout site
@@ -42,7 +42,7 @@ jobs:
       - name: Install node dependencies
         run: npm ci
       - name: Build docs
-        run: npm run build
+        run: npm run deploy
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
