--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./site/",
     "sourceMap": true,
     "noImplicitAny": false,
+    "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es5",
